--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Google Redirect Backlinks</title>
   </head>
   <body>
-    <h1>350+ Google Redirect Backlinks</h1>
+    <h1>Google Redirect Backlinks</h1>
     <a href="https://maps.google.com/url?q=https://gamesroid.com">https://maps.google.com/url?q=https://gamesroid.com</a>
     </p>
     <p>
