--- a/index.html
+++ b/index.html
@@ -1577,5 +1577,8 @@
     <p>
       <a href="https://cse.google.ne/url?q=https://gamesroid.com">https://cse.google.ne/url?q=https://gamesroid.com</a>
     </p>
+     <p>
+      <a href="https://bit.ly/m/gamesroid">https://bit.ly/m/gamesroid</a>
+    </p>
 </body>
 </html>
