--- a/index.html
+++ b/index.html
@@ -631,5 +631,21 @@
 <a href="https://vijaysinghrawat.mystrikingly.com" target="_blank">https://vijaysinghrawat.mystrikingly.com</a>
 <a href="https://n4g.com" target="_blank">https://n4g.com</a>
 <a href="https://members.sitegadgets.com/mysticrose/links.html" target="_blank">https://members.sitegadgets.com/mysticrose/links.html</a>
+<a href="https://teddit.sdf.org/r/gamesroid/" target="_blank">https://teddit.sdf.org/r/gamesroid/</a>
+<a href="https://rb.gy/xhdthv" target="_blank">https://rb.gy/xhdthv</a>
+<a href="https://teddit.sethforprivacy.com/r/gamesroid" target="_blank">https://teddit.sethforprivacy.com/r/gamesroid</a>
+<a href="https://nitter.cutelab.space/games_roid" target="_blank">https://nitter.cutelab.space/games_roid</a>
+<a href="https://nitter.fdn.fr/games_roid" target="_blank">https://nitter.fdn.fr/games_roid</a>
+<a href="https://nitter.kavin.rocks/games_roid" target="_blank">https://nitter.kavin.rocks/games_roid</a>
+<a href="https://n.actionsack.com/games_roid" target="_blank">https://n.actionsack.com/games_roid</a>
+<a href="https://teddit.adminforge.de/r/gamesroid" target="_blank">https://teddit.adminforge.de/r/gamesroid</a>
+<a href="https://nitter.spaceint.fr/games_roid" target="_blank">https://nitter.spaceint.fr/games_roid</a>
+<a href="https://socialgrep.com/search?query=%2Fr%2Fgamesroid" target="_blank">https://socialgrep.com/search?query=%2Fr%2Fgamesroid</a>
+<a href="https://nitter.poast.org/games_roid" target="_blank">https://nitter.poast.org/games_roid</a>
+<a href="https://twitter.privacyplz.org/games_roid" target="_blank">https://twitter.privacyplz.org/games_roid</a>
+<a href="https://www.domaininfofree.com/domain-traffic/gamesroid.com" target="_blank">https://www.domaininfofree.com/domain-traffic/gamesroid.com</a>
+<a href="https://nt.catgirl.cloud/games_roid" target="_blank">https://nt.catgirl.cloud/games_roid</a>
+<a href="https://client.paltalk.com/client/webapp/client/External.wmt?url=https://gamesroid.com" target="_blank">https://client.paltalk.com/client/webapp/client/External.wmt?url=https://gamesroid.com</a>
+<a href="https://news.google.com/articles/CAIiEOdElMm5ZJzTgc2bKGZUdNoqGQgEKhAIACoHCAow_dS5CzCK8NADMMy04Ac?uo=CAUiQGh0dHBzOi8vZ2FtZXNyb2lkLmNvbS9mcmVlLWZpcmUtYWR2YW5jZS1zZXJ2ZXItYWN0aXZhdGlvbi1jb2Rlcy_SAQA&hl=en-IN&gl=IN&ceid=IN%3Aen" target="_blank">https://news.google.com/articles/CAIiEOdElMm5ZJzTgc2bKGZUdNoqGQgEKhAIACoHCAow_dS5CzCK8NADMMy04Ac?uo=CAUiQGh0dHBzOi8vZ2FtZXNyb2lkLmNvbS9mcmVlLWZpcmUtYWR2YW5jZS1zZXJ2ZXItYWN0aXZhdGlvbi1jb2Rlcy_SAQA&hl=en-IN&gl=IN&ceid=IN%3Aen</a>
 </body>
 </html>
