--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Redirect Backlinks</title>
+    <title>1</title>
   </head>
   <body>
 <a href="https://www.folkd.com/user/VijaySinghRawat" target="_blank">https://www.folkd.com/user/VijaySinghRawat</a>
