--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1</title>
   </head>
+<style>
+body {
+  background-image: url('1-Number-PNG-Images.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
   <body>
 <h1>Somehing you need to know about One:</h1>
 
