--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <style>
 body {
-  background-image: url('1-Number-PNG-Images.png');
+  background-image: url('https://raw.githubusercontent.com/opunknown/1/main/1-Number-PNG-Images.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
